<resources>
    <string name="app_name">Droid Cafe</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="intro_text">Droid Desert</string>
    <string name="content_dis">Donuts are glazed and sprinkled with candy.</string>
    <string name="ice_con_dis">Ice cream sandwiches have chocolate wafers and vanilla filling.</string>
    <string name="froyo_dis">FroYo is premium self-serve frozen yogurt.</string>

    <string name="dount_order_massage">You ordered Dount</string>
    <string name="ice_cream_order_massage">You ordered Ice-Cream sandwice.</string>
    <string name="froyo_order_massage">You ordered Froyo.</string>
    <string name="name_lable_text">Name</string>
    <string name="name_text_hint">Enter Your Name</string>
    <string name="address_lable_text">Address</string>
    <string name="address_text_hint">Enter your Address</string>
    <string name="phone_text">Phone</string>
    <string name="phone_text_hint">Enter Your Phone Number</string>
    <string name="note_lable_text">Note</string>
    <string name="note_text_hint">Enter Note</string>
    <string name="delivery_method_text">Choose A Delivery Method</string>
    <string name="sameday_text">Same day messenger service</string>
    <string name="nextday_text">Next day ground Delivery</string>
    <string name="piclup_text">Pick Up</string>
    <string name="contact_text">Contact</string>
    <string name="action_order">Order</string>
    <string name="action_status">Status</string>
    <string name="action_favorities">Favorities</string>

    <string-array name="lables_array">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>

    </string-array>

    <string name="action_order_message">You selected Order.</string>
    <string name="action_status_message">You selected Status.</string>
    <string name="action_favorites_message">You selected Favorites.</string>
    <string name="action_contact_message">You selected Contact.</string>

</resources>