<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.droidcafe.MainActivity">

    <item
        android:id="@+id/action_contact"
        android:orderInCategory="100"
        android:title="@string/contact_text"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_order"
        android:orderInCategory="10"
        android:title="@string/action_order"
        android:icon="@drawable/ic_order"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_status"
        android:orderInCategory="20"
        android:title="@string/action_status"
        app:showAsAction="always"
        android:icon="@drawable/ic_status_info"/>
    <item
        android:id="@+id/action_favorities"
        android:orderInCategory="30"
        android:title="@string/action_favorities"
        android:icon="@drawable/ic_favorite"
        app:showAsAction="always" />
</menu>